--- a/package.json
+++ b/package.json
@@ -8,19 +8,43 @@
     "test": "razzle test --env=jsdom",
     "start:prod": "NODE_ENV=production node build/server.js"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "kao-server(.*)$": "<rootDir>/src/server/$1",
+      "kao-store(.*)$": "<rootDir>/src/store/$1",
+      "kao-redux(.*)$": "<rootDir>/src/redux/$1",
+      "kao-components(.*)$": "<rootDir>/src/client/components/$1",
+      "kao-client(.*)$": "<rootDir>/src/client/$1",
+      "kao-containers(.*)$": "<rootDir>/src/client/containers/$1",
+      "kao-assets(.*)$": "<rootDir>/src/client/assets/$1",
+      "kao-styles(.*)$": "<rootDir>/src/client/styles/$1"
+    }
+  },
   "dependencies": {
+    "axios": "^0.17.1",
     "express": "^4.16.2",
+    "material-ui": "^1.0.0-beta.26",
+    "prop-types": "^15.6.0",
+    "pug": "^2.0.0-rc.4",
     "raf": "^3.4.0",
     "razzle": "^0.8.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.4.0"
   },
   "devDependencies": {
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-pug-plugin": "^0.2.1",
+    "react-test-renderer": "^16.2.0",
+    "serialize-javascript": "^1.4.0"
   }
 }
