--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "my-razzle-app",
+  "name": "react-razzle-init",
   "version": "0.1.0",
-  "license": "MIT",
+  "description": "React Redux SSR boilerplate for razzle",
+  "author": "Nanang Suryadi <nanang.jobs@gmail.com>",
   "scripts": {
     "start": "razzle start",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
     "start:prod": "NODE_ENV=production node build/server.js"
   },
+  "repository": "http://github.com/isaacs/abbrev-js",
+  "license": "WTFPL",
   "jest": {
     "moduleNameMapper": {
       "kao-server(.*)$": "<rootDir>/src/server/$1",
