--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-razzle-init",
+  "name": "agent-desktop-web",
   "version": "0.1.0",
-  "description": "React Redux SSR boilerplate for razzle",
+  "description": "React Redux SSR boilerplate for agent desktop web",
   "author": "Nanang Suryadi <nanang.jobs@gmail.com>",
   "scripts": {
     "start": "razzle start",
@@ -13,6 +13,8 @@
   "license": "WTFPL",
   "jest": {
     "moduleNameMapper": {
+      "kao-config(.*)$": "<rootDir>/config/$1",
+      "kao-util(.*)$": "<rootDir>/src/utils/$1",
       "kao-server(.*)$": "<rootDir>/src/server/$1",
       "kao-store(.*)$": "<rootDir>/src/store/$1",
       "kao-redux(.*)$": "<rootDir>/src/redux/$1",
@@ -25,18 +27,20 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-runtime": "^6.26.0",
+    "compression": "^1.7.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
-    "material-ui": "^1.0.0-beta.26",
-    "prop-types": "^15.6.0",
+    "js-cookie": "^2.2.0",
+    "path-to-regexp": "^2.1.0",
     "pug": "^2.0.0-rc.4",
-    "raf": "^3.4.0",
-    "razzle": "^0.8.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "serialize-javascript": "^1.4.0",
     "styled-components": "^2.4.0"
   },
   "devDependencies": {
@@ -47,7 +51,9 @@
     "eslint-plugin-react": "^7.5.1",
     "html-webpack-plugin": "^2.30.1",
     "html-webpack-pug-plugin": "^0.2.1",
-    "react-test-renderer": "^16.2.0",
-    "serialize-javascript": "^1.4.0"
+    "prop-types": "^15.6.0",
+    "raf": "^3.4.0",
+    "razzle": "^0.8.7",
+    "react-test-renderer": "^16.2.0"
   }
 }
