--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     }
   },
   "dependencies": {
+    "antd-mobile": "^2.1.3",
     "axios": "^0.17.1",
     "babel-runtime": "^6.26.0",
     "compression": "^1.7.1",
@@ -37,6 +38,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
@@ -44,6 +46,9 @@
     "styled-components": "^2.4.0"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.6.3",
+    "babel-plugin-styled-components": "^1.4.0",
+    "clean-css": "^4.1.9",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
@@ -51,9 +56,12 @@
     "eslint-plugin-react": "^7.5.1",
     "html-webpack-plugin": "^2.30.1",
     "html-webpack-pug-plugin": "^0.2.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "razzle": "^0.8.7",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "style-loader": "^0.19.1"
   }
 }
