kraken(engine): syariah lending

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 HOST=localhost
 PORT=5033
+RAZZLE_APP=agentApp
 RAZZLE_API_PORT=4171
 RAZZLE_API_URL=http://devapi.pinjam.co.id
 RAZZLE_SECRET_KEY=dop32d9834uruw3ipofhwh4fq4
